# GeoLlama

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: auto-test.yml  main.yml  nightly_build.yml  python-package.yml
GeoLlama/: calc_by_slice.py  config.py  evaluate.py  io.py  io.py~  main.py  objects.py  report.py
geollama/: __init__.py  calc_by_slice.py  config.py  evaluate.py  io.py  main.py  objects.py  report.py
test/: test_calc_by_slice.py  test_config.py  test_evaluate.py  test_io.py  test_main.py
