[tool.poetry]
name = "GeoLlama"
version = "0.1.0"
description = "A Python package for estimating sample thickness in cryo electron tomograms"
authors = ["Neville Yee <neville.yee@rfi.ac.uk>"]
license = "Apache V2"
readme = "README.md"
packages = [{include = "GeoLlama"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = ">=1.22"
plotly = "^5.17.0"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.1"
mrcfile = "^1.4.3"
scipy = "^1.10"
pytest = "^7.4.2"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.6.0"
pandas = "^2.1.1"
tabulate = "^0.9.0"
starfile = "^0.4.12"
matplotlib = "^3.1.2"

[tool.poetry.scripts]
geollama = "GeoLlama.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
