
# [tool.poetry]
# name = "GeoLlama"
# version = "0.0.0" # Placeholder only - change version number in __init__ file.
# dynamic = ["version"]
# description = "A Python package for estimating sample thickness in cryo electron tomograms"
# authors = ["Neville Yee <neville.yee@rfi.ac.uk>"]
# license = "Apache V2"
# readme = "README.md"
# packages = [{include = "GeoLlama"}]

# [tool.poetry.dependencies]
# python = ">=3.9, <3.12"
# numpy = "^1.22"
# plotly = "^5.17.0"
# scikit-image = "^0.21.0"
# scikit-learn = "^1.3.1"
# mrcfile = "^1.4.3"
# scipy = "^1.10"
# pytest = "^7.4.2"
# typer = {extras = ["all"], version = "^0.9.0"}
# rich = "^13.6.0"
# pandas = "^2.1.1"
# tabulate = "^0.9.0"
# starfile = "^0.4.12"
# matplotlib = "^3.1.2"
# pyinstrument = "^4"
# icecream = "*"
# typing-extensions = "*"
# ruamel-yaml = "*"
# umap-learn = "*"

# papermill = "*"
# ipython = "*"
# ipykernel = "*"
# seaborn = "*"
# nbconvert = "*"
# opencv-python = "*"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "GeoLlama"
dynamic = ["version"]
description = "A Python package for estimating sample thickness in cryo electron tomograms"
authors = [
    {name = "Neville B.-y. Yee"},
]
license = {text = "Apache License V.2"}
readme = "README.md"
packages = [{include = "geollama"}]

requires-python = ">=3.9"
dependencies = [
	"numpy",
	"plotly",
	"scikit-image",
	"scikit-learn",
	"mrcfile",
	"scipy",
	"pytest",
	"typer",
	"rich",
	"pandas",
	"tabulate",
	"starfile",
	"matplotlib",
	"pyinstrument",
	"icecream",
	"typing-extensions",
	"ruamel-yaml",
	"umap-learn",
	"papermill",
	"ipython",
	"ipykernel",
	"seaborn",
	"nbconvert",
	"opencv-python",
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.scripts]
geollama = "geollama.main:app"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.from-file]
source = "geollama/__init__.py"
pattern = '''^__version__\s*=\s*"([0-9]+\.[0-9]+\.[0-9]+.*?)"'''

