[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "GeoLlama"
dynamic = ["version"]
description = "A Python package for estimating sample thickness in cryo electron tomograms"
authors = [
    {name = "Neville B.-y. Yee"},
]
license = {text = "Apache License V.2"}
readme = "README.md"
packages = [{include = "geollama"}]

requires-python = ">=3.9"
dependencies = [
	"numpy",
	"plotly",
	"scikit-image",
	"scikit-learn",
	"mrcfile",
	"scipy",
	"pytest",
	"typer",
	"rich",
	"pandas",
	"tabulate",
	"starfile",
	"matplotlib",
	"pyinstrument",
	"icecream",
	"typing-extensions",
	"ruamel-yaml",
	"umap-learn",
	"papermill",
	"ipython",
	"ipykernel",
	"seaborn",
	"nbconvert",
	"opencv-python",
	"pip==25.1.1",
]

[tool.poetry]
version = "1.0.2"
[tool.poetry.scripts]
geollama = "geollama.main:app"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.from-file]
source = "geollama/__init__.py"
pattern = '''^__version__\s*=\s*"([0-9]+\.[0-9]+\.[0-9]+.*?)"'''

